--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
     <div class="wrapper">
-        <i class="fa-regular fa-circle-question"></i>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <i class="fa-regular fa-circle-question"></i>
+        </a>
         <h2 class="question">Bist du dumm?</h2>
         <div class="btn-group">
             <button class="yes-btn">JA!</button>
