--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dummheitstest.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <title>Dummheitskalkulator</title>
+    <title>Kritische Abfrage</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             <i class="fa-regular fa-circle-question"></i>
         </a>
-        <h2 class="question">Bist du dumm?</h2>
+        <h2 class="question">Findest du Eva bescheuert?</h2>
         <div class="btn-group">
             <button class="yes-btn">JA!</button>
             <button class="no-btn">Nein.</button>
