--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             <i class="fa-regular fa-circle-question"></i>
         </a>
-        <h2 class="question">Findest du Eva bescheuert?</h2>
+        <h2 class="question">Findest du Eva  doof?</h2>
         <div class="btn-group">
             <button class="yes-btn">JA!</button>
             <button class="no-btn">Nein.</button>
